--- a/index.html
+++ b/index.html
@@ -1,6 +1,61 @@
-<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="WGRRYx" data-editable="true" data-user="mattjuggins" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/mattjuggins/pen/WGRRYx">
-  Circular Calendar Display</a> by Matthew Juggins (<a href="https://codepen.io/mattjuggins">@mattjuggins</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Widget</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div class='center-dial'>
+  <h1 class='center-preview'>HELLO</h1>
+  <div class='head'></div>
+  <div class='torso'></div>
+  <div class='hand-container' id='minutes'>
+    <div class='minute-hand'></div>
+  </div>
+  <div class='hand-container' id='hours'>
+    <div class='hour-hand'></div>
+  </div>
+  <div class='hand-container' id='seconds'>
+    <div class='second-hand'></div>
+  </div>
+</div>
+<div class='day-name-dial'>
+  <div class='ring-back'></div>
+  <div class='ring' id='r1'>
+    <h1 class='day-name-preview'>DAY NAME</h1>
+    <h2 class='day-name-text'>MON TUE WED THU FRI SAT SUN</h2>
+  </div>
+</div>
+<div class='month-dial'>
+  <div class='ring-back'></div>
+  <div class='ring' id='r2'>
+    <h1 class='month-preview'>MONTH</h1>
+    <h2 class='month-text'>JAN FEB MAR APR MAY JUN JUL AUG SEP OCT NOV DEC</h2>
+  </div>
+</div>
+<div class='day-dial'>
+  <div class='ring-back'></div>
+  <div class='ring' id='r3'>
+    <h1 class='day-preview'>DAY</h1>
+    <h2 class='day-text'>01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31</h2>
+  </div>
+</div>
+<div class='side-ring' id='weather'>
+  <!-- /.fa.fa-cloud -->
+</div>
+<!-- /	%p{:class => "temperature"} 14&#176C -->
+<!-- / -->
+<div class='side-ring' id='steps'>
+  <div class='bars'>
+    <div class='bar'></div>
+  </div>
+</div>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js'></script><script  src="./script.js"></script>
+
+</body>
+</html>
